--- a/app/index.html
+++ b/app/index.html
@@ -22,12 +22,12 @@
     <!-- Add your site or application content here -->
     <div class="container">
       <div class="header">
-        <ul class="nav nav-pills pull-right">
+<!--        <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
           <li><a ng-href="#/about">About</a></li>
           <li><a ng-href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">2Id26</h3>
+        </ul>-->
+        <h3 class="text-muted">2ID26 - Music Recommender</h3>
       </div>
 
       <div ng-view=""></div>
