--- a/app/index.html
+++ b/app/index.html
@@ -22,11 +22,11 @@
     <!-- Add your site or application content here -->
     <div class="container">
       <div class="header">
-<!--        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
-        </ul>-->
+        <ul class="nav nav-pills pull-right">
+          <li ng-class="{'active': curTab === 'home'}"><a ng-href="#">Home</a></li>
+          <li ng-class="{'active': curTab === 'about'}"><a ng-href="#/about">About</a></li>
+          <!--<li><a ng-href="#">Contact</a></li>-->
+        </ul>
         <h3 class="text-muted">2ID26 - Music Recommender</h3>
       </div>
 
@@ -78,6 +78,10 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/firebase/firebase.js"></script>
+    <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
+    <script src="bower_components/mockfirebase/dist/mockfirebase.js"></script>
+    <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
