--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,8 @@
     <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
     <script src="bower_components/mockfirebase/dist/mockfirebase.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
+    <script src="bower_components/angular-spotify/dist/angular-spotify.min.js"></script>
+    <script src="bower_components/angular-post-message/dist/angular-post-message.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
