add songs with lyrics and cluster

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li ng-class="{'active': curTab === 'home'}"><a ng-href="#">Home</a></li>
+          <li ng-class="{'active': curTab === 'songs'}"><a ng-href="#/songs">Songs</a></li>
           <li ng-class="{'active': curTab === 'about'}"><a ng-href="#/about">About</a></li>
           <!--<li><a ng-href="#">Contact</a></li>-->
         </ul>
@@ -91,6 +92,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/songs.js"></script>
         <!-- endbuild -->
 </body>
 </html>
