create song page width detailed info

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
           <li ng-class="{'active': curTab === 'about'}"><a ng-href="#/about">About</a></li>
           <!--<li><a ng-href="#">Contact</a></li>-->
         </ul>
-        <h3 class="text-muted">2ID26 - Music Recommender</h3>
+        <h3 class="text-muted">Music Recommender</h3>
       </div>
 
       <div ng-view=""></div>
@@ -93,6 +93,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/songs.js"></script>
+    <script src="scripts/controllers/song.js"></script>
         <!-- endbuild -->
 </body>
 </html>
