--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
         <ul class="nav nav-pills pull-right">
           <li ng-class="{'active': curTab === 'home'}"><a ng-href="#">Home</a></li>
           <li ng-class="{'active': curTab === 'songs'}"><a ng-href="#/songs">Songs</a></li>
+          <li ng-class="{'active': curTab === 'clusters'}"><a ng-href="#/clusters">Clusters</a></li>
           <li ng-class="{'active': curTab === 'about'}"><a ng-href="#/about">About</a></li>
           <!--<li><a ng-href="#">Contact</a></li>-->
         </ul>
@@ -94,6 +95,8 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/songs.js"></script>
     <script src="scripts/controllers/song.js"></script>
+    <script src="scripts/controllers/clusters.js"></script>
+    <script src="scripts/controllers/cluster.js"></script>
         <!-- endbuild -->
 </body>
 </html>
