--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
 	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 	  ga('create', 'UA-55860526-1', 'auto');
+    ga('require', 'displayfeatures');
 	  ga('send', 'pageview');
 
 	</script>
