--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
       </div>
 
       <div ng-view=""></div>
+      <div id="dz-root"></div>
 
       <div class="footer">
         <p>2ID26 - Information retrieval and data mining</p>
@@ -99,6 +100,8 @@
     <script src="scripts/controllers/song.js"></script>
     <script src="scripts/controllers/clusters.js"></script>
     <script src="scripts/controllers/cluster.js"></script>
+    <script src="bower_components/ng-deezer-sdk/deezer.js"></script>
+    <script src="//cdn-files.deezer.com/js/min/dz.js"></script>
         <!-- endbuild -->
 </body>
 </html>
