--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
     <script src="scripts/controllers/song.js"></script>
     <script src="scripts/controllers/clusters.js"></script>
     <script src="scripts/controllers/cluster.js"></script>
+    <script src="../bower_components/ng-deezer-sdk/deezer.js"></script>
         <!-- endbuild -->
 </body>
 </html>
