change footer and change step 3 look

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
       <div id="dz-root"></div>
 
       <div class="footer">
-        <p>2ID26 - Information retrieval and data mining</p>
+        <p>TU/e - 2ID26 - Information retrieval and data mining</p>
       </div>
     </div>
 
